<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/endpoint_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/endpoint_label"
        android:textIsSelectable="false" />

    <EditText
        android:id="@+id/endpoint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/endpoint_label"
        android:hint="@string/endpoint_message" />

    <TextView
        android:id="@+id/graph_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/endpoint"
        android:hint="@string/graph_message"
        android:textIsSelectable="false" />

    <Button
        android:id="@+id/graph_query_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/graph_label"
        android:text="@string/button_graph" />
    
    <Spinner
        android:id="@+id/graph"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/graph_query_send"
        android:hint="@string/graph_message" />

    <TextView
        android:id="@+id/sparql_query_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/graph"
        android:hint="@string/sparql_query_label"
        android:textIsSelectable="false" />

    <Button
        android:id="@+id/predicate_query_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sparql_query_label"
        android:text="@string/button_predicate" />

    <MultiAutoCompleteTextView
        android:id="@+id/sparql_query"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/predicate_query_send"
        android:gravity="top"
        android:hint="@string/sparql_query_message"
        android:inputType="textMultiLine"
        android:isScrollContainer="true" />

    <Button
        android:id="@+id/sparql_query_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sparql_query"
        android:text="@string/button_send" />

    <Button
        android:id="@+id/sparql_query_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sparql_query"
        android:layout_alignParentRight="true"
        android:layout_toLeftOf="@id/sparql_query_send"
        android:text="@string/button_load" />

    <Button
        android:id="@+id/sparql_query_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sparql_query"
        android:layout_toLeftOf="@id/sparql_query_load"
        android:text="@string/button_save" />

</RelativeLayout>